# fall_package

./: MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
fall_package/: __init__.py  wrapper.py
fall_package/object_detector/models/: experimental.c
fall_package/weights/: fall.enc
